modified about.html and work.html

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
             <span class="text-secondary">Me</span>
         </h1>
         <h2 class="sm-heading">
-            Let me tell you more about mysel>>>
+            Let me tell you more about myself>>>
         </h2>
         <div class="about-info">
             <img src="resized_pic.png" alt="Sarthak_Parida" class="bio-image">
