--- a/work.html
+++ b/work.html
@@ -59,23 +59,23 @@
     <div class="projects">
       <div class="item">
         <a href="#!">
-          <img src="projects/personal_portfolio_web_1965x802.jpg" alt="Project">
+          <img src="projects/s3_static_web.png" alt="Project">
         </a>
-        <a href="&#xECB4;" class="btn-light">
-            <i class="ri-eye-fill ri-2x"></i> Project
+        <a href="http://mys3staticwebsite2023.s3-website-us-east-1.amazonaws.com/" class="btn-light">
+            <i class="ri-eye-fill ri-2x"></i>A simple static website is deployed on aws_s3 using IaaC tool Terraform.
         </a>
-        <a href="&#xEDCA;">
-            <i class="ri-github-fill ri-4x"></i> Github link
+        <a href="https://github.com/Sarthak027/s3_static_website.git">
+            <i class="ri-github-fill ri-4x"></i> 
         </a>
       </div>
       <div class="item">
         <a href="#!">
-          <img src="projects/project2.jpg" alt="Project">
+          <img src="projects/Realtime_cloud_native_monitoring_app.jpg" alt="Project">
         </a>
         <a href="&#xECB4;" class="btn-light">
-            <i class="ri-eye-fill ri-2x"></i> Project
+            <i class="ri-eye-fill ri-2x"></i>  Realtime_cloud_native_monitoring_app
         </a>
-        <a href="&#xEDCA;">
+        <a href="https://github.com/Sarthak027/Realtime_cloud_native_monitoring_app.git">
             <i class="ri-github-fill ri-4x"></i> Github link
         </a>
       </div>
