--- a/work.html
+++ b/work.html
@@ -72,11 +72,11 @@
         <a href="#!">
           <img src="projects/Realtime_cloud_native_monitoring_app.jpg" alt="Project">
         </a>
-        <a href="&#xECB4;" class="btn-light">
+        <a href="https://github.com/Sarthak027/Realtime_cloud_native_monitoring_app.git;" class="btn-light">
             <i class="ri-eye-fill ri-2x"></i>  Realtime_cloud_native_monitoring_app
         </a>
         <a href="https://github.com/Sarthak027/Realtime_cloud_native_monitoring_app.git">
-            <i class="ri-github-fill ri-4x"></i> Github link
+            <i class="ri-github-fill ri-4x"></i> 
         </a>
       </div>
       <div class="item">
